# pro-chat

./: .env  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .long-term.md.swp  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  long-term.md  next-up.md  package-lock.json  package.json  plan.md  react-native-plan.md  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
apps/api/: .env  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.tsbuildinfo
apps/api/prisma/: schema.prisma
apps/api/src/: app.ts  env.ts  index.ts  modelSeed.ts  types.ts
apps/api/src/middleware/: clerkAuth.ts  localUser.ts
apps/api/src/repositories/: inMemoryRepo.ts  prismaRepo.ts  types.ts
apps/api/src/services/: braveSearchProvider.ts  chatService.ts  memoryExtractor.ts  memoryStore.ts  memoryTool.ts  openrouter.ts  pythonTool.ts  searchTool.ts  streamCleanup.ts  streamTracker.ts  webFetchTool.ts
apps/api/src/utils/: attachments.ts  cost.ts  thinking.ts
apps/api/test/: attachments.test.ts  chatService.test.ts  cost.test.ts  webFetchTool.test.ts
apps/desktop/: README.md  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  types.ts
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/web/: package.json
apps/web/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  main.tsx  types.ts
apps/web/src-tauri/: Cargo.toml
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: main.rs
scripts/: loc.ts  prepare-tauri.sh
(+5 files in other folders)
