[package]
name = "pro-chat"
version = "0.1.0"
description = "Pro Chat desktop app"
authors = ["pro-chat"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.5.3", features = [] }
tauri-plugin-notification = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# empty placeholder to keep cargo happy if we add features later
default = []
